--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -315,6 +315,10 @@ footer .footer-content .footer-nav #gnav-gens {
     @apply list-decimal;
 }
 
+.articles .post-content code {
+    @apply whitespace-pre-wrap;
+}
+
 /* --------------------
 
     記事一覧ページ
